Deploy/kind/product-api-kind.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productapi
  template:
    metadata:
      labels:
        app: productapi
    spec:
      containers:
      - name: ecom-product-api
        image: ecom-product-api:v0.0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name:  productapi-service
spec:
  selector:
    app:  productapi
  type: NodePort
  ports:
  - port:  80
    nodePort: 30091
