Deploy/kind/web-app-kind.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-web-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecom-webapp
  template:
    metadata:
      labels:
        app: ecom-webapp
    spec:
      containers:
      - name: web-app
        image: ecom-web:v0.0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name:  ecom-webapp-service
spec:
  selector:
    app:  ecom-webapp
  type: NodePort
  ports:
  - port: 80
    nodePort: 30000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ecom-webapp-ingress
spec:
  rules:
  - host: "web.app.internal"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: ecom-webapp-service
          servicePort: 80
---
